<resources>
    <string name="app_name">CampusConnect</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="logar">Logar</string>
    <string name="nao_possui_conta">Ainda não possui conta?\nCadastre-se aqui</string>
    <string name="insira_info">Insira suas informações nos\n campos abaixo</string>
    <string name="nome">Nome Completo</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="altere_sua_senha_abaixo">Altere sua senha abaixo:</string>
    <string name="por_favor_digite_seu_e_mail">Por favor, digite seu e-mail</string>
    <string name="enviar">Enviar</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="alterar">Alterar</string>
    <string name="xxxxx_gmail_com">xxxx@gmail.com</string>
    <string name="voc_est_conectado_ao_campus">Você está conectado ao campus</string>
    <string name="fa_a_seu_login_com_uma_das_contas_abaixo">Faça seu login com uma das contas abaixo</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="entrar_com_e_mail_e_senha">Entrar com e-mail e senha</string>
    <string name="n_o_tem_uma_conta_cadastre_se">Não tem uma conta? Cadastre-se</string>
    <string name="fa_a_seu_login">Faça seu login</string>
    <string name="entre_com_as_suas_informa_es_de_cadastro">Entre com as suas informações de cadastro.</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_e_mail">Digite seu E-mail</string>
    <string name="entre_com_as_suas_informa_es_de_login">Entre com as suas informações de login</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="cadastre_se_com_suas_informa_es_abaixo">Cadastre-se com suas informações abaixo.</string>
    <string name="digite_seu_nome_completo">Digite seu nome completo</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="informe_seu_e_mail_para_recupera_o_de_senha">Informe seu e-mail para recuperação de senha.</string>
    <string name="digite_sua_nova_senha">Digite sua nova senha</string>
    <string name="nome_do_estabelecimento">Nome do estabelecimento</string>
    <string name="descri_o">Descrição</string>
    <string name="aberto_08_00_18_00">Aberto: 08:00 - 18:00</string>
    <string name="produtos">Produtos</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="atualizar">Atualizar</string>
    <string name="underline">____________________________________</string>
    <string name="pre_o_r_40_00">Preço: R$40,00</string>
    <string name="pre_o_r_25_00">Preço: R$25,00</string>
    <string name="pre_o_r_20_00">Preço: R$20,00</string>
    <string name="pre_o_r_6_00">Preço: R$6,00</string>
    <string name="pre_o_r_35_00">Preço: R$ 35,00</string>
    <string name="title_activity_tela_produto">TelaProduto</string>
    <string name="desc_prod">Descrição do produto</string>
    <string name="nota">Nota</string>
    <string name="comentarios">Comentários</string>
    <string name="adicionar_comentario">ADICIONAR COMENTÁRIO</string>
    <string name="adicionar_coment">ADICIONAR COMENTÁRIO</string>
    <string name="desc_prod2">Descrição do produto</string>
    <string name="nota2">Nota</string>
    <string name="comentarios2">Comentários</string>
    <string name="adicionar_comentario2">ADICIONAR COMENTÁRIO</string>
    <string name="adicionar_coment2">ADICIONAR COMENTÁRIO</string>
    <string name="desc_prod3">Descrição do produto</string>
    <string name="nota3">Nota</string>
    <string name="comentarios3">Comentários</string>
    <string name="adicionar_comentario3">ADICIONAR COMENTÁRIO</string>
    <string name="adicionar_coment3">ADICIONAR COMENTÁRIO</string>
    <string name="desc_prod4">Descrição do produto</string>
    <string name="nota4">Nota</string>
    <string name="comentarios4">Comentários</string>
    <string name="adicionar_comentario4">ADICIONAR COMENTÁRIO</string>
    <string name="adicionar_coment4">ADICIONAR COMENTÁRIO</string>
    <string name="desc_prod5">Descrição do produto</string>
    <string name="nota5">Nota</string>
    <string name="comentarios5">Comentários</string>
    <string name="adicionar_comentario5">ADICIONAR COMENTÁRIO</string>
    <string name="adicionar_coment5">ADICIONAR COMENTÁRIO</string>
    <string name="buscar_estabelecimentos">Buscar estabelecimentos</string>
    <string name="estabelecimentos">Estabelecimentos</string>
    <string name="voce_e">Você é?</string>
    <string name="dono_estabelecimento">Dono de estabelecimento</string>
    <string name="cliente">Cliente</string>
    <string name="cadastrar_estabelecimento">Você ainda não tem um estabelecimento cadastrado! Cadastre-se agora mesmo clicando no botão abaixo.</string>
    <string name="url_da_foto">Cole aqui a URL da nova foto se quiser alterá-la</string>
    <string name="excluir_produto">Tem certeza que deseja excluir esse produto?</string>
    <string name="excluir">Excluir</string>
    <string name="cadastrar_produto">Cadastrar produto</string>
    <string name="cadastre_estabelecimento">Cadastre seu estabelecimento</string>
    <string name="nome_estabelecimento">Nome do estabelecimento</string>
    <string name="digite_nome_estabelecimento">Digite o nome do estabelecimento</string>
    <string name="cnpj">CNPJ</string>
    <string name="digite_cnpj">Digite seu CNPJ</string>
    <string name="descricao">Descrição</string>
    <string name="digite_descricao">Descrição (máximo 100 caracteres)</string>
    <string name="digite_horario_funcionamento">Horário de funcionamento (HH:MM-HH:MM)</string>
    <string name="horario_funcionamento">Horário de funcionamento</string>
    <string name="url_foto">URL da foto</string>
    <string name="url_foto_cole">Digite a URL da foto</string>
    <string name="price">Preço</string>
    <string name="digite_price">Digite o preço (R$00,00)</string>
    <string name="cadastre_seu_produto">Cadastre seu produto</string>
    <string name="produto_nome">Nome do produto</string>
    <string name="digite_produto_nome">Digite o nome do produto</string>
    <string name="avalie_produto">Avalie o produto</string>
    <string name="avalie">Avalie</string>

</resources>
