<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/come_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_voltar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:drawableTint="@color/blue"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_sem_fundo"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/ic_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_estabelecimento"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:drawableStart="@drawable/ic_login"
        android:layout_marginStart="30dp"
        android:drawableTint="@color/yellow"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/nome_do_estabelecimento"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/digite_nome_estabelecimento"
        android:background="@drawable/borda"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/blue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/cnpj"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etCnpj"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/digite_cnpj"
        android:background="@drawable/borda"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColorHint="@color/gray"
        android:textColor="@color/gray"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/blue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/descricao"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/digite_descricao"
            android:textSize="15sp"
            android:background="@drawable/borda"
            android:layout_gravity="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/horario_funcionamento"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/etOpeningHours"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/digite_horario_funcionamento"
            android:textSize="15sp"
            android:background="@drawable/borda"
            android:layout_gravity="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/url_foto"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/etPhoto"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/url_foto_cole"
            android:textSize="15sp"
            android:background="@drawable/borda"
            android:layout_gravity="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/cadastrar"
        android:textColor="@color/blue"
        android:background="@drawable/borda"
        android:backgroundTint="@color/yellow"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

</LinearLayout>
