<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/come_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_voltar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:drawableTint="@color/blue"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_sem_fundo"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/ic_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_seu_produto"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:drawableStart="@drawable/ic_login"
        android:layout_marginStart="8dp"
        android:drawableTint="@color/yellow"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/nome_do_produto"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/digite_produto_nome"
        android:background="@drawable/borda"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/blue"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/descricao"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/digite_descricao"
            android:textSize="14sp"
            android:background="@drawable/borda"
            android:layout_gravity="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        />



        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/digite_price"
            android:textSize="14sp"
            android:background="@drawable/borda"
            android:layout_gravity="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/url_foto"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        />

        <EditText
            android:id="@+id/etPhoto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/url_foto_cole"
            android:textSize="14sp"
            android:background="@drawable/borda"
            android:layout_gravity="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>



    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/cadastrar"
        android:textColor="@color/blue"
        android:background="@drawable/borda"
        android:backgroundTint="@color/yellow"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

</LinearLayout>
