<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_sem_fundo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altere_sua_senha_abaixo"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_informar_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/por_favor_digite_seu_e_mail"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_email_esqueci_senha"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/xxxxx_gmail_com"
        android:background="@drawable/borda"
        android:drawableEnd="@drawable/ic_email"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/yellow"
        />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/corPrincipal"
        android:text="@string/enviar"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txt_nova_senha"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/nova_senha"
            android:background="@drawable/borda"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txt_confirmar_senha"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/confirmar_senha"
            android:background="@drawable/borda"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAlterarSenha"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/borda"
        android:backgroundTint="@color/corPrincipal"
        android:text="@string/alterar"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/voltar"
        android:textColor="@color/black"
        android:background="@drawable/borda"
        android:backgroundTint="@color/corPrincipal"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />

</LinearLayout>