<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/seta_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_voltar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:drawableTint="@color/blue"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_sem_fundo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/ic_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fa_a_seu_login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:drawableStart="@drawable/ic_login"
        android:layout_marginStart="30dp"
        android:drawableTint="@color/yellow"/>

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entre_com_as_suas_informa_es_de_cadastro"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/digite_seu_e_mail"
        android:textSize="15sp"
        android:background="@drawable/borda"
        android:drawableStart="@drawable/ic_email"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:drawableTint="@color/blue"
        android:drawablePadding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/senha"
        android:textSize="17sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/digite_sua_senha"
            android:textSize="15sp"
            android:background="@drawable/borda"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_cadeado"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:drawableTint="@color/blue"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/etEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/esqueci_senha"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"/>

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/logar"
        android:textColor="@color/blue"
        android:background="@drawable/borda"
        android:backgroundTint="@color/yellow"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textStyle="bold" />

</LinearLayout>
